Refactor Component and SpaceShip classes to improve connector management and component destruction logic